--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-328.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-715.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-911.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇫🇷 法国-268.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-341.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇺🇸 美国-794.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-654.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-427.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-841.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇸🇬 新加坡-962.0KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇬🇧 英国-2.52MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇬🇧 英国-493.9KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇮🇹 意大利-480.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇸🇬 新加坡-1.61MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-338.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 38.143.66.20, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-962.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.9KB/s(Youtube:不良林)
       - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-962.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.9KB/s(Youtube:不良林)
       - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-962.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.9KB/s(Youtube:不良林)
       - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-962.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.9KB/s(Youtube:不良林)
       - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-962.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.9KB/s(Youtube:不良林)
       - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-962.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.9KB/s(Youtube:不良林)
       - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-715.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-654.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-427.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-841.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-962.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇬🇧 英国-493.9KB/s(Youtube:不良林)
       - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
