--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-911.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇫🇷 法国-268.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-341.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-794.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇬🇧 英国-2.52MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇮🇹 意大利-480.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇸🇬 新加坡-1.61MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-338.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 38.143.66.20, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-940.3KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇫🇷 法国-198.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-593.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-579.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇭🇰 香港-11.68MB/s(Youtube:不良林), server: xmrh011.xmrth-node.xyz, port: 15885, type: vmess, uuid: e23a5542-8e62-3572-9afb-6640d61d91b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh011.xmrth-node.xyz}}
+  - {name: 🇨🇦 加拿大-829.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.45MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-2.12MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-198.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-198.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-198.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-198.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-198.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-198.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-911.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-268.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-794.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-480.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-198.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-593.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-579.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
