--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-338.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-169.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-400.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-853.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-327.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 38.143.66.20, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇭🇰 香港-11.68MB/s(Youtube:不良林), server: xmrh011.xmrth-node.xyz, port: 15885, type: vmess, uuid: e23a5542-8e62-3572-9afb-6640d61d91b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh011.xmrth-node.xyz}}
+  - {name: 🇫🇷 法国-1.10MB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-768.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-340.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.46MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇬🇧 英国-848.9KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-328.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-443.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-969.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-169.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-400.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-853.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-768.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-169.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-400.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-853.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-768.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-169.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-400.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-853.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-768.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-169.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-400.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-853.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-768.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-169.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-400.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-853.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-768.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-169.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-400.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-853.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-768.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-169.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-400.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-853.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-768.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-340.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-848.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
