--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇫🇷 法国-790.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-443.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-2.19MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-969.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-484.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-629.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.59MB/s(Youtube:不良林), server: ddns.0318.cyou, port: 12345, type: ss, cipher: chacha20-ietf-poly1305, password: 89ab8225-6873-45e9-b0e8-b8aebbfa9945}
-  - {name: 🇨🇳 中国-308.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-446.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1010.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-931.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-3.79MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 38.143.66.20, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 38.143.66.20, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-989.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 38.143.66.20, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: 38.143.66.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-790.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-790.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-790.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-790.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-790.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-790.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-790.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-443.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-484.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-629.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1010.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-931.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-989.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
